--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.qantium</groupId>
     <artifactId>uisteps-core</artifactId>
     <version>1.0</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <url>https://github.com/qantium/uisteps-core</url>
     
