--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.qantium</groupId>
     <artifactId>uisteps-core</artifactId>
-    <version>1.0</version>
+    <version>1.2</version>
     <packaging>jar</packaging>
 
     <url>https://github.com/qantium/uisteps-core</url>
@@ -55,8 +55,8 @@
     <dependencies>
         <dependency>
             <groupId>ru.yandex.qatools.htmlelements</groupId>
-            <artifactId>htmlelements-thucydides</artifactId>
-            <version>1.15-SNAPSHOT</version>
+            <artifactId>htmlelements-java</artifactId>
+            <version>2.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
