--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -108,10 +108,20 @@
             <version>2.47.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>ru.stqa.selenium</groupId>
+            <artifactId>webdriver-factory</artifactId>
+            <version>1.1.47</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
-            
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
