--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -119,6 +119,12 @@
             <version>1.7.7</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
