--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -125,6 +125,11 @@
             <version>1.5.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>net.lightbody.bmp</groupId>
+            <artifactId>browsermob-core-littleproxy</artifactId>
+            <version>2.1.0-beta-3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
