--- a/uisteps-core/pom.xml
+++ b/uisteps-core/pom.xml
@@ -5,7 +5,8 @@
     <groupId>com.qantium</groupId>
     <artifactId>uisteps-core</artifactId>
     <name>${project.artifactId}</name>
-    <version>2.21</version>
+    <description>Framework based on Selenium</description>
+    <version>2.22</version>
     <packaging>jar</packaging>
 
     <url>https://github.com/qantium/uisteps-core</url>
@@ -142,6 +143,11 @@
             <groupId>net.lightbody.bmp</groupId>
             <artifactId>browsermob-core-littleproxy</artifactId>
             <version>2.1.0-beta-3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.qantium</groupId>
+            <artifactId>net</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
     <build>
